--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+*.js linguist-language=HTML
+*.css linguist-language=HTML
+*.html linguist-language=HTML
